lg以下は完成

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -73,34 +73,34 @@
           </ul>
         </div>
         <ul class="collapse navbar-nav concept-nav" id="conceptNav">
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">ブログアーカイブ</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">お知らせアーカイブ</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">イベントアーカイブ</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">インタビューアーカイブ</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">FAQページ</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">固定ページ(デフォルト)</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">CONCEPT</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">SERVICE</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">FLOOR</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item concept-nav-item">
             <a href="#" class="nav-link">ACCESS</a>
           </li>
         </ul>
