--- a/src/components/organisms/top/top.scss
+++ b/src/components/organisms/top/top.scss
@@ -2,6 +2,10 @@
 
 .top-wrapper {
   background-color: $v_black;
+  margin-bottom: 40px;
+  @media screen and (min-width: $v_breakpoint_lg) {
+    margin-bottom: 30px;
+  }
   .img-title-wrapper {
     position: relative;
     display: flex;
@@ -30,13 +34,20 @@
   }
   .message-wrapper {
     @media screen and (min-width: $v_breakpoint_lg) {
-      padding-bottom: 74px;
+      padding: 52px 0 74px;
     }
     .message-title {
       color: $v_white;
+
+      @media screen and (min-width: $v_breakpoint_lg) {
+        padding: 0 49.5px;
+      }
     }
     .message-text {
       color: $v_white;
+      @media screen and (min-width: $v_breakpoint_lg) {
+        padding: 0 38.5px;
+      }
     }
   }
 }
