レスポンシブ対応

--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -13,12 +13,19 @@
   </div>
   <div class="footer-nav-wrapper">
     <p>HOME</p>
+    <img src="../../../page/img/border.png" />
     <p>CONCEPT</p>
+    <img src="../../../page/img/border.png" />
     <p>SERVICE</p>
+    <img src="../../../page/img/border.png" />
     <p>FLLOR</p>
+    <img src="../../../page/img/border.png" />
     <p>INTERVIEW</p>
+    <img src="../../../page/img/border.png" />
     <p>BLOG</p>
+    <img src="../../../page/img/border.png" />
     <p>ACCESS</p>
+    <img src="../../../page/img/border.png" />
     <p>DOWNLOAD</p>
   </div>
   <p class="bottom-text">
