--- a/src/components/molecules/card/card.scss
+++ b/src/components/molecules/card/card.scss
@@ -45,7 +45,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 32px 0;
+    padding: 32px 46px;
+
+    @media screen and (min-width: $v_breakpoint_md) {
+      padding: 32px 35px;
+    }
 
     .card-text {
       font-size: $v_fontsize_s;
