レビュー点の修正

--- a/src/components/organisms/events/events.scss
+++ b/src/components/organisms/events/events.scss
@@ -73,10 +73,9 @@
         }
       }
     }
-  }
-
-  .all-article-wrapper .article-wrapper:last-child {
-    border-bottom: 1px solid $v_gray_gainsboro;
+    .article-wrapper:last-child {
+      border-bottom: 1px solid $v_gray_gainsboro;
+    }
   }
 
   .news-more-wrapper {
