レビュー点の修正

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -24,7 +24,7 @@
             <a href="#" class="lg-concept nav-link">CONCEPT</a>
             <a
               href="#"
-              class="xl-concept dropdown-toggle"
+              class="xl-concept dropdown-toggle nav-link"
               type="button"
               id="dropdownMenu"
               data-toggle="dropdown"
