--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -48,15 +48,17 @@
       margin: 0 0 0 auto;
       .nav-item {
         padding: 18px;
+        box-sizing: border-box;
 
         @media screen and (min-width: $v_breakpoint_xl) {
           padding: 0;
-          margin-left: 40px;
+          width: 100%;
+          height: 100%;
 
-          a {
-            padding: 0;
-            margin: 35px 0;
+          .nav-link {
+            display: block;
             transition: color 0.2s ease;
+            padding: 35px 20px;
 
             &:hover {
               color: $v_gray_nobel;
@@ -71,8 +73,17 @@
           .nav-link {
             color: $v_white;
             font-size: $v_fontsize_s;
-            line-height: 26px;
             padding: 0;
+
+            @media screen and (min-width: $v_breakpoint_lg) {
+              display: block;
+              transition: color 0.2s ease;
+              padding: 35px 20px;
+
+              &:hover {
+                color: $v_gray_nobel;
+              }
+            }
           }
 
           .plus-icon {
@@ -141,6 +152,12 @@
 
       .nav-item:nth-child(8) {
         margin-right: 50px;
+      }
+
+      @media screen and (min-width: $v_breakpoint_lg) {
+        .nav-item:last-child .nav-link {
+          padding: 35px 0 35px 20px;
+        }
       }
     }
   }
