--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -47,14 +47,16 @@
     .navbar-nav {
       margin: 0 0 0 auto;
       .nav-item {
-        padding: 18px;
         box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+
+        .nav-link {
+          padding: 18px;
+        }
 
         @media screen and (min-width: $v_breakpoint_xl) {
           padding: 0;
-          width: 100%;
-          height: 100%;
-
           .nav-link {
             display: block;
             transition: color 0.2s ease;
@@ -73,7 +75,7 @@
           .nav-link {
             color: $v_white;
             font-size: $v_fontsize_s;
-            padding: 0;
+            padding: 18px;
 
             @media screen and (min-width: $v_breakpoint_lg) {
               display: block;
@@ -90,6 +92,7 @@
             width: 26px;
             height: 26px;
             padding: 0;
+            margin-right: 17px;
             cursor: pointer;
           }
 
@@ -119,7 +122,16 @@
 
             .dropdown-item {
               background-color: $v_black;
-              padding: 18px;
+              box-sizing: border-box;
+              padding: 0;
+
+              a {
+                width: 100%;
+                height: 100%;
+                padding: 18px;
+                display: block;
+              }
+
               a:hover {
                 color: $v_white;
               }
@@ -139,14 +151,8 @@
             display: none;
           }
         }
-        .concept-nav-item:first-child {
-          padding-top: 36px;
-        }
-        .concept-nav-item:last-child {
-          padding-bottom: 0;
-        }
         .concept-nav-item {
-          padding: 18px 10px;
+          padding: 0 10px;
         }
       }
 
